--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/client.rs"
 tonic = "0.8"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+async-graphql = "5.0.6"
 
 [build-dependencies]
 tonic-build = "0.8"
